hphp/hack/test/typecheck/reactive/pure_overridden_interface.php
<?hh

interface IPure {
  <<__Pure>>
  public function pure(): void;
}
class IPureChild implements IPure {
  public function pure(): void {}
}
